# iasa-computer-vision

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
notebooks/: lab1.ipynb  lab2.ipynb  lab3.ipynb  lab4.ipynb  lab5.ipynb
src/: models.py  plot_tools.py  trainer.py  utils.py
src/losses/: diceloss.py
src/models/: blocks.py  lenet.py  resnet.py  unet.py  vggnet.py
src/train/: trainer.py
src/train/metrics/: metric_collection.py  metrics.py
