[project]
name = "iasa-computer-vision"
version = "0.1.0"
description = "Labs for the IASA Computer Vision course."
authors = [
    {name = "Mariia Dodonova"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
