[tool.poetry]
name = "iasa-computer-vision"
version = "0.1.0"
description = "Labs for the IASA Computer Vision Course."
authors = ["Mariia Dodonova <maridodonova@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
numpy = "<2.3.0"
matplotlib = "^3.10.7"
opencv-python = "^4.12.0.88"
torch = {version = "^2.9.0+cu130", source = "pytorch-gpu"}
ipykernel = "^7.0.1"
torchvision = "^0.24.0"


[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu130"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
